iterate over the array and show the items

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,29 @@ nav {
   text-decoration: none;
   color: black;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.itemImage {
+  width: 10vw;
+  height: 10;
+}
+.itemCard {
+  border: 3px solid blue;
+  width: 20vw;
+  padding: 1vw 2vw;
+}
+.lineBreak {
+  opacity: 40%;
+}
+.itemContainer {
+  padding: 2vw 2vw;
+  display: grid;
+  gap: 1vw;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+}
