--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ nav {
   gap: 4vw;
 }
 * {
-  outline: 0.4px dotted black;
+  /* outline: 0.4px dotted black; */
 }
 .link {
   text-decoration: none;
@@ -101,6 +101,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .cartButton {
   width: 80px;
   height: 25px;
+}
+.link {
   display: flex;
   gap: 6px;
   align-items: center;
