style on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,7 @@ nav {
   display: flex;
   gap: 4vw;
 }
-* {
-  /* outline: 0.4px dotted black; */
-}
+
 .link {
   text-decoration: none;
   color: black;
@@ -41,15 +39,6 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.itemImage {
-  width: 12vw;
-  height: 13vw;
-}
-.itemCard {
-  border: 3px solid blue;
-  width: 20vw;
-  padding: 1vw 2vw;
-}
 .lineBreak {
   opacity: 40%;
 }
@@ -94,26 +83,51 @@ input[type="number"]::-webkit-outer-spin-button {
   width: 5vw;
 }
 
-.cartPage {
-  padding: 2vw 2vw;
-}
 
-.cartButton {
-  width: 80px;
-  height: 25px;
-}
 .link {
   display: flex;
   gap: 6px;
   align-items: center;
 }
 .circle {
-  width: 20px;
-  height: 20px;
-  border: 1px red;
-  background-color: #554af0;
+  width: 2vw;
+  height: 2vw;
+  border: 1px rgb(14, 14, 14);
+  background-color: rgb(213, 93, 93);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+}
+
+.button {
+  border: none;
+  color: white;
+  background: none;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: rgb(184, 115, 153);
+  color: #554af0;
+}
+nav {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 2vw;
+  color: white;
+}
+.link {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 2vw;
+  color: white;
+}
+.cartButton {
+  width: 80px;
+  height: 3.4vw;
+  background: none;
+  border: none;
+}
+* {
+  /* outline: 0.4px dotted black; */
 }
