style itemcard and shop page through css modules

--- a/src/Components/ItemCard/ItemCard.module.css
+++ b/src/Components/ItemCard/ItemCard.module.css
@@ -13,6 +13,8 @@
     width: 20vw;
     padding: 1vw 2vw;
     transition: transform .3s ease-in-out;
+    color: rgb(89, 89, 231);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .itemCard:hover {
     transform: scale(1.04);
@@ -26,5 +28,55 @@
     margin-bottom: 1.5vw;
 }
 .title {
+    overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    height: 3vw;
+    margin-bottom: 2vw;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.editQtyContainer {
+    display: flex;
+    justify-content: center;
+    gap: 1vw;
+    margin-bottom: 1vw;
+    margin-top: 1vw;
+}
+.editQtyContainer button {
+    background-color: rgb(238, 238, 238);
+    border: none;
+    border-radius: 3px;
+    width: 24px;
+    height: 30px;
+}
+.editQtyContainer button:hover {
+    background-color: rgb(207, 207, 207);
+}
+.inputQty {
+    display: flex;
+    text-align: center;
+    width: 4vw;
+    border: none;
+    background-color: rgb(159, 159, 159);
+    border-radius: 2px;
+    line-height: 2vw;
+    /* height: 2vw; */
+}
+.addToCartButton {
+    width: 100%;
+    height: 3vw;
+    border-radius: 6px;
+    border: none;
+    background-color: rgb(89, 89, 228);
+}
+.addToCartButton:hover {
+    background-color: rgb(176, 176, 237);
+}
+.price {
+    margin-bottom: 0.5vw;
+    font-weight: bold;
 }
