--- a/src/App.css
+++ b/src/App.css
@@ -39,15 +39,6 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-
-.cartItem {
-  border: 2px solid black;
-}
-.cartImage {
-  height: 5vw;
-  width: 5vw;
-}
-
 .link {
   display: flex;
   gap: 6px;
@@ -63,6 +54,7 @@ input[type="number"]::-webkit-outer-spin-button {
   align-items: center;
   justify-content: center;
   color: white;
+  font-size: 1.1vw;
 }
 
 .button {
