--- a/src/Components/ItemCard/ItemCard.module.css
+++ b/src/Components/ItemCard/ItemCard.module.css
@@ -52,9 +52,13 @@
     border-radius: 3px;
     width: 24px;
     height: 30px;
+    transition: 0.2s all;
 }
 .editQtyContainer button:hover {
     background-color: rgb(207, 207, 207);
+}
+.editQtyContainer button:active {
+    transform: scale(0.98);
 }
 .inputQty {
     display: flex;
@@ -72,6 +76,12 @@
     border-radius: 6px;
     border: none;
     background-color: rgb(89, 89, 228);
+    cursor: pointer;
+    transition: 0.2s all;
+}
+.addToCartButton:active {
+    transform: scale(0.98);
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
 .addToCartButton:hover {
     background-color: rgb(176, 176, 237);
