--- a/src/Components/Shop/Shop.module.css
+++ b/src/Components/Shop/Shop.module.css
@@ -29,5 +29,6 @@
     display: grid;
     gap: 1.5vw;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: minmax(auto, repeat(5, 1fr));
+    height: fit-content;
 }
